Fix for bug 106489 (Text entered in box does not appear)

- Moved MoveChildrenTo() and GetRealFrame() to a point in the
  file where they could be called from my new utility method
  AdjustOutOfFlowFrameParentPtrs().

- Modified MoveChildrenTo() to take an nsFrameConstructorState arg,
  so that it can call my new method AdjustOutOfFlowFrameParentPtrs()
  so that out-of-flow floater frames are reparented to the correct
  containing block when the placeholder is moved under the block
  created in ConstructInline().

r=attinasi@netscape.com  sr=waterson@netscape.com